@@ -1,3 +1,7 @@
+2013-06-22  Thiep Ha
+
+        * Edje: Move cursor to correct position when selection handlers are pressed.
+
 2013-06-19  Cedric Bail
 
 	* Evas: optimized path for when map use the same color for all corner.
